testing/stage_15/valid/short_argument.c
int g(short b)
{
	return b-5;
}

int main()
{
	return g(19);
}