testing/stage_15/invalid/short_missing_name.c
int main()
{
	short =4;
	return a;
}